--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-shortcuts==1.6
 idna==3.3
 jwcrypto==1.0
 oauthlib==3.2.0
+psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
 python3-openid==3.2.0
