--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,12 @@ Deprecated==1.2.13
 Django==4.0.2
 django-allauth==0.49.0
 django-cors-headers==3.11.0
+django-crispy-forms==1.14.0
 django-oauth-toolkit==1.7.0
 django-shortcuts==1.6
 idna==3.3
 jwcrypto==1.0
 oauthlib==3.2.0
-psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
 python3-openid==3.2.0
