--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-cors-headers==3.11.0
 django-crispy-forms==1.14.0
 django-oauth-toolkit==1.7.0
 django-shortcuts==1.6
+django-vinaigrette==2.0.1
 idna==3.3
 jwcrypto==1.0
 oauthlib==3.2.0
