--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,29 @@
-asgiref==3.5.0
-backports.zoneinfo==0.2.1
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
-crispy-bootstrap5==0.6
-cryptography==36.0.1
-defusedxml==0.7.1
-Deprecated==1.2.13
-Django==4.0.2
-django-allauth==0.49.0
-django-cors-headers==3.11.0
-django-crispy-forms==1.14.0
-django-oauth-toolkit==1.7.0
-django-shortcuts==1.6
-django-vinaigrette==2.0.1
-idna==3.3
-jwcrypto==1.0
-oauthlib==3.2.0
-Pillow==9.0.1
-psycopg2-binary==2.9.3
-pycparser==2.21
-PyJWT==2.3.0
-python3-openid==3.2.0
-requests==2.27.1
-requests-oauthlib==1.3.1
-sqlparse==0.4.2
-urllib3==1.26.8
-wrapt==1.13.3
+asgiref>=3.5.0
+backports.zoneinfo>=0.2.1
+certifi>=2021.10.8
+cffi>=1.15.0
+charset-normalizer>=2.0.12
+crispy-bootstrap5>=0.6
+cryptography>=36.0.1
+defusedxml>=0.7.1
+Deprecated>=1.2.13
+Django>=4.0.2
+django-allauth>=0.49.0
+django-cors-headers>=3.11.0
+django-crispy-forms>=1.14.0
+django-oauth-toolkit>=1.7.0
+django-shortcuts>=1.6
+django-vinaigrette>=2.0.1
+idna>=3.3
+jwcrypto>=1.0
+oauthlib>=3.2.0
+Pillow>=9.0.1
+psycopg2-binary>=2.9.3
+pycparser>=2.21
+PyJWT>=2.3.0
+python3-openid>=3.2.0
+requests>=2.27.1
+requests-oauthlib>=1.3.1
+sqlparse>=0.4.2
+urllib3>=1.26.8
+wrapt>=1.13.3
