--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.5.1
-backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1;python_version<"3.9"
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
@@ -7,7 +7,7 @@ crispy-bootstrap5==0.6
 cryptography==37.0.2
 defusedxml==0.7.1
 Deprecated==1.2.13
-Django==4.0.6
+Django==4.0.7
 django-allauth==0.50.0
 django-cors-headers==3.11.0
 django-crispy-forms==1.14.0
