--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ django-oauth-toolkit==2.0.0
 django-shortcuts==1.6
 django-vinaigrette==2.0.1
 idna==3.3
-jwcrypto==1.2
+jwcrypto>=1.4
 oauthlib==3.2.1
 Pillow==9.1.1
 psycopg2-binary==2.9.3
