--- a/start/static/manifest/manifest.json
+++ b/start/static/manifest/manifest.json
@@ -1,7 +1,7 @@
 {
 	"short_name": "kawaitree",
 	"name": "Kawai Tree",
-	"lang": "en-US",
+	"lang": "fr-FR",
 	"description": "Web app for bonsai management",
 	"start_url": "/",
 	"background_color": "#490714",
