--- a/start/static/manifest/manifest-fr.json
+++ b/start/static/manifest/manifest-fr.json
@@ -11,6 +11,11 @@
 	"orientation": "any",
 	"icons": [
 		{
+			"src": "/static/manifest/icon/icon-512.png",
+			"type": "image/png",
+			"sizes": "512x512"
+		},
+		{
 			"src": "/static/manifest/icon/android-icon-192x192.png",
 			"type": "image/png",
 			"sizes": "192x192"
