--- a/start/static/manifest/manifest.json
+++ b/start/static/manifest/manifest.json
@@ -4,12 +4,18 @@
 	"lang": "fr-FR",
 	"description": "Web app for bonsai management",
 	"start_url": "/",
+	"scope": "/",
 	"background_color": "#490714",
 	"theme_color": "#490714",
 	"dir": "ltr",
 	"display": "standalone",
 	"orientation": "any",
 	"icons": [
+		{
+			"src": "/static/manifest/icon/icon-512.png",
+			"type": "image/png",
+			"sizes": "512x512"
+		},
 		{
 			"src": "/static/manifest/icon/android-icon-192x192.png",
 			"type": "image/png",
