--- a/start/static/manifest/manifest-fr.json
+++ b/start/static/manifest/manifest-fr.json
@@ -4,6 +4,7 @@
 	"lang": "fr-FR",
 	"description": "Webapp pour la gestion des bonsaï",
 	"start_url": "/",
+	"scope": ".",
 	"background_color": "#490714",
 	"theme_color": "#490714",
 	"dir": "ltr",
