--- a/start/static/manifest/manifest.json
+++ b/start/static/manifest/manifest.json
@@ -1,7 +1,7 @@
 {
 	"short_name": "kawaitree",
 	"name": "Kawai Tree",
-	"lang": "fr-FR",
+	"lang": "en-US",
 	"description": "Web app for bonsai management",
 	"start_url": "/",
 	"scope": "/",
@@ -14,72 +14,86 @@
 		{
 			"src": "/static/manifest/icon/icon-512.png",
 			"type": "image/png",
-			"sizes": "512x512"
+			"sizes": "512x512",
+			"purpose": "maskable"
 		},
 		{
 			"src": "/static/manifest/icon/android-icon-192x192.png",
 			"type": "image/png",
-			"sizes": "192x192"
+			"sizes": "192x192",
+			"purpose": "maskable"
 		},
 		{
 			"src": "/static/manifest/icon/apple-icon-180x180.png",
 			"type": "image/png",
-			"sizes": "180x180"
+			"sizes": "180x180",
+			"purpose": "maskable"
 		},
 		{
 			"src": "/static/manifest/icon/apple-icon-152x152.png",
 			"type": "image/png",
-			"sizes": "152x152"
+			"sizes": "152x152",
+			"purpose": "maskable"
 		},
 		{
 			"src": "/static/manifest/icon/apple-icon-144x144.png",
 			"type": "image/png",
-			"sizes": "144x144"
+			"sizes": "144x144",
+			"purpose": "maskable"
 		},
 		{
 			"src": "/static/manifest/icon/apple-icon-120x120.png",
 			"type": "image/png",
-			"sizes": "120x120"
+			"sizes": "120x120",
+			"purpose": "maskable"
 		},
 		{
 			"src": "/static/manifest/icon/apple-icon-114x114.png",
 			"type": "image/png",
-			"sizes": "114x114"
+			"sizes": "114x114",
+			"purpose": "maskable"
 		},
 		{
 			"src": "/static/manifest/icon/apple-icon-76x76.png",
 			"type": "image/png",
-			"sizes": "76x76"
+			"sizes": "76x76",
+			"purpose": "maskable"
 		},
 		{
 			"src": "/static/manifest/icon/apple-icon-72x72.png",
 			"type": "image/png",
-			"sizes": "72x72"
+			"sizes": "72x72",
+			"purpose": "maskable"
 		},
 		{
 			"src": "/static/manifest/icon/apple-icon-60x60.png",
 			"type": "image/png",
-			"sizes": "60x60"
+			"sizes": "60x60",
+			"purpose": "maskable"
 		},
 		{
 			"src": "/static/manifest/icon/apple-icon-57x57.png",
 			"type": "image/png",
-			"sizes": "57x57"
+			"sizes": "57x57",
+			"purpose": "maskable"
 		},
 		{
 			"src": "/static/manifest/icon/favicon.png",
 			"type": "image/png",
-			"sizes": "96x96"
+			"sizes": "96x96",
+			"purpose": "maskable"
 		},
 		{
 			"src": "/static/manifest/icon/favicon-32x32.png",
 			"type": "image/png",
-			"sizes": "32x32"
+			"sizes": "32x32",
+			"purpose": "maskable"
 		},
 		{
 			"src": "/static/manifest/icon/favicon-16x16.png",
 			"type": "image/png",
-			"sizes": "16x16"
+			"sizes": "16x16",
+			"purpose": "maskable"
 		}
 	],
 	"prefer_related_applications": false
